se agregan checkbox, select

--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -22,4 +22,21 @@
                   >
     <app-password formControlName="password"></app-password>
   </app-form-field>
+
+  <app-form-field label="Select"
+                  [required]="true"
+                  [control]="form.controls['select']"
+                  [isInline]="isInline"
+                  >
+    <app-select formControlName="select" [items]="items"></app-select>
+  </app-form-field>
+
+  <app-form-field label="Checkboxes"
+                  [required]="true"
+                  [control]="form.controls['checkbox']"
+                  [isInline]="isInline"
+                  >
+    <app-checkbox formControlName="checkboxes" [items]="items"></app-checkbox>
+  </app-form-field>
+
 </form>
