--- a/src/app/shared/controls/password/password.component.html
+++ b/src/app/shared/controls/password/password.component.html
@@ -4,7 +4,7 @@
           [value]="value"
           [placeholder]="placeholder || 'Password'"
           [attr.disabled]="isDisabled ? true : null"
-          (keyUp)="onKeyup($event)"
+          (keyup)="onKeyup($event)"
           (blur)="onBlur()"
           [attr.type]="passwordType"
   >
