Se termina página de registro e inicio de sesion, Se agregan páginas estáticas, Se agrega directiva para subida de archivos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-header></app-header>
+<app-header [isAuthorized]="isAuthorized$ | async"
+            (signOut)="onSignOut()"></app-header>
 <router-outlet></router-outlet>
