--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,18 @@
 <div class="header">
-  <div class="header__title">
+  <div class="header__title" routerLink="/">
     Ecommerce
   </div>
   <div class="header__navigation">
+    <div *ngIf="!isAuthorized">
+      <a href="" class="app-a" routerLink="auth/registration" routerLinkActive="app-a_active">Registrar</a>
+      <a href="" class="app-a" routerLink="auth/login" routerLinkActive="app-a_active">Iniciar</a>
+    </div>
+
     <a href="" class="app-a" routerLink="demo" routerLinkActive="app-a_active">demo</a>
+
+    <div *ngIf="isAuthorized">
+      <a href="" class="app-a" (click)="onSignOut()">Cerrar sesión</a>
+    </div>
+
   </div>
 </div>
