--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,3 +1,7 @@
+<h2>Upload de archivos</h2>
+<app-button appFilesUpload>Upload</app-button>
+
+
 <h2>Actions</h2>
 <app-button (click)="onToggleSpinner()">Toggle spinner</app-button>
 <app-button (click)="onError()">Error</app-button>
