Se agregan formularios de profile

--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,5 +1,12 @@
 <h2>Upload de archivos</h2>
-<app-button appFilesUpload>Upload</app-button>
+<app-button appFilesUpload [multiple]="true"
+            (changed)="onFilesChanged($event)">
+            Subir múltiples imagenes
+</app-button>
+
+<app-button appFilesUpload [crop]="true">
+            Subir una imagen
+</app-button>
 
 
 <h2>Actions</h2>
