--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,14 +4,15 @@
   </div>
   <div class="header__navigation">
     <div *ngIf="!isAuthorized">
-      <a href="" class="app-a" routerLink="auth/registration" routerLinkActive="app-a_active">Registrar</a>
-      <a href="" class="app-a" routerLink="auth/login" routerLinkActive="app-a_active">Iniciar</a>
+      <a class="app-a" routerLink="auth/registration" routerLinkActive="app-a_active">Registrar</a>
+      <a class="app-a" routerLink="auth/login" routerLinkActive="app-a_active">Iniciar</a>
     </div>
 
-    <a href="" class="app-a" routerLink="demo" routerLinkActive="app-a_active">demo</a>
+    <a class="app-a" routerLink="demo" routerLinkActive="app-a_active">demo</a>
 
     <div *ngIf="isAuthorized">
-      <a href="" class="app-a" (click)="onSignOut()">Cerrar sesión</a>
+      <a class="app-a" routerLink="profile/new">Perfil</a>
+      <a class="app-a" (click)="onSignOut()">Cerrar sesión</a>
     </div>
 
   </div>
